Project pconlineshop {
  database_type: "MySQL"
  Note: "ERD source for the PC Online Shop report. Chat tables are intentionally excluded from the report-level ERD."
}

Table account {
  account_id int [pk, increment]
  phone_number varchar(20) [unique, not null]
  password varchar(255) [not null]
  role varchar(50)
  email varchar(100)
  first_name varchar(50)
  last_name varchar(50)
  gender bit
  address varchar(255)
  enabled bit
}

Table account_address {
  address_id int [pk, increment]
  account_id int [not null]
  full_name varchar(100) [not null]
  phone varchar(20) [not null]
  address varchar(255) [not null]
  is_default bit
}

Table brand {
  brand_id int [pk, increment]
  name varchar(100) [not null]
  description varchar(500)
  website varchar(255)
  status bit
}

Table category {
  category_id int [pk, increment]
  parent_id int
  category_name varchar(100) [not null]
  description varchar(500)
  display_order int
  created_at date
}

Table product {
  product_id int [pk, increment]
  brand_id int
  product_name varchar(255) [not null]
  price decimal(15,0) [not null]
  status bit
  lifecycle_status varchar(30) [not null]
  description varchar(500)
  specification varchar(500)
  created_at date
  inventory_quantity int
  performance_score int
}

Table product_category {
  product_id int [pk, not null]
  category_id int [pk, not null]
}

Table image {
  image_id int [pk, increment]
  product_id int [not null]
  image_url varchar(255)
  created_at date
}

Table external_product_source {
  external_product_source_id int [pk, increment]
  product_id int [not null]
  provider_code varchar(50) [not null]
  external_id varchar(255) [not null]
  sku varchar(255)
  currency varchar(10)
  product_url varchar(500)
}

Table cpu {
  product_id int [pk]
  socket varchar(50)
  tdp int
  max_memory_speed int
  memory_channels int
  pcie_version varchar(20)
  has_igpu bit
}

Table gpu {
  product_id int [pk]
  vram int
  memory_type varchar(50)
  tdp int
  gpu_interface varchar(50)
  pcie_version varchar(20)
  length int
}

Table mainboard {
  product_id int [pk]
  socket varchar(50)
  chipset varchar(50)
  form_factor varchar(50)
  memory_slots int
  max_memory_speed int
  memory_type varchar(50)
  pcie_version varchar(20)
  m2_slots int
  sata_ports int
}

Table memory {
  product_id int [pk]
  type varchar(50)
  capacity int
  speed int
  tdp int
  modules int
}

Table storage {
  product_id int [pk]
  type varchar(50)
  capacity int
  interface varchar(50)
  read_speed int
  write_speed int
}

Table pc_case {
  product_id int [pk]
  form_factor varchar(50)
  gpu_max_length int
  cpu_max_cooler_height int
  psu_form_factor varchar(20)
}

Table power_supply {
  product_id int [pk]
  wattage int
  efficiency varchar(50)
  modular bit
  form_factor varchar(20)
}

Table cooling {
  product_id int [pk]
  type varchar(50)
  max_tdp int
  fan_size int
  radiator_size int
}

Table cart {
  cart_id int [pk, increment]
  account_id int [not null]
  status varchar(50)
  updated_date date
}

Table cart_item {
  cart_item_id int [pk, increment]
  cart_id int [not null]
  product_id int [not null]
  quantity int
  is_selected bit [not null]
  is_build_item bit [not null]
  build_id varchar(50)
}

Table orders {
  order_id bigint [pk, increment]
  account_id int [not null]
  final_amount decimal(15,0)
  status varchar(50)
  created_date date
  shipping_method varchar(50) [not null]
  note text
  shipping_full_name varchar(100) [not null]
  shipping_phone varchar(20) [not null]
  shipping_address varchar(255) [not null]
  ready_to_ship_date datetime
  shipment_received_date datetime
  payment_id varchar(255)
  payment_status varchar(50)
  paid_at datetime
}

Table payments {
  payment_id bigint [pk, increment]
  order_id bigint [not null]
  gateway_payment_id varchar(255)
  amount decimal(15,0)
  currency varchar(10)
  status varchar(50)
  raw_payload text
  created_at datetime
  updated_at datetime
  order_code bigint [unique]
}

Table order_detail {
  order_detail_id int [pk, increment]
  order_id bigint [not null]
  product_id int [not null]
  quantity int [not null]
  price decimal(15,0) [not null]
}

Table feedback {
  feedback_id int [pk, increment]
  account_id int [not null]
  product_id int [not null]
  comment varchar(500)
  rating int
  comment_status varchar(50)
  reply varchar(500)
  created_at datetime
}

Ref: account_address.account_id > account.account_id [delete: cascade]
Ref: category.parent_id > category.category_id [delete: set null]
Ref: product.brand_id > brand.brand_id
Ref: product_category.product_id > product.product_id [delete: cascade]
Ref: product_category.category_id > category.category_id [delete: cascade]
Ref: image.product_id > product.product_id [delete: cascade]
Ref: external_product_source.product_id > product.product_id [delete: cascade]

Ref: cpu.product_id - product.product_id [delete: cascade]
Ref: gpu.product_id - product.product_id [delete: cascade]
Ref: mainboard.product_id - product.product_id [delete: cascade]
Ref: memory.product_id - product.product_id [delete: cascade]
Ref: storage.product_id - product.product_id [delete: cascade]
Ref: pc_case.product_id - product.product_id [delete: cascade]
Ref: power_supply.product_id - product.product_id [delete: cascade]
Ref: cooling.product_id - product.product_id [delete: cascade]

Ref: cart.account_id > account.account_id [delete: cascade]
Ref: cart_item.cart_id > cart.cart_id [delete: cascade]
Ref: cart_item.product_id > product.product_id
Ref: orders.account_id > account.account_id
Ref: payments.order_id > orders.order_id [delete: cascade]
Ref: order_detail.order_id > orders.order_id [delete: cascade]
Ref: order_detail.product_id > product.product_id
Ref: feedback.account_id > account.account_id
Ref: feedback.product_id > product.product_id
